# chatPPT2

./: .gitignore  APIDOCS.MD  API_SPECIFICATION-v0.2.md  API_SPECIFICATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yaml  docker-compose.yml  e v0.1.0 [There is a simple single-page presentation that can be generated directly from a description.]  index.html  manage.sh  pyproject.toml  start_dev.bat
backend/: Dockerfile  ENV_SETUP.md  pytest.ini  rag_metadata.json  requirements-test-simple.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routers.py
backend/app/core/: __init__.py  celery_app.py  config.py
backend/app/routers/: __init__.py  generation.py  rag.py  tasks.py
backend/app/schemas/: __init__.py  generation.py  rag.py  task.py
backend/app/services/: __init__.py  content.py  design.py  exporter.py  outline.py  rag.py
backend/app/worker/: __init__.py  tasks.py
backend/output/: .gitkeep
backend/tests/: test_real_api.py  test_task_router.py
frontend/: .env.development  Dockerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx  router.jsx
frontend/src/api/: client.js
frontend/src/components/: CanvasPanel.jsx  ChatArea.jsx  ChatComponents.jsx  Editor.jsx  Monitor.jsx  Sidebar.jsx  SlidePreview.jsx
frontend/src/hooks/: useChatMachine.js  useStream.js  useTask.js
frontend/src/routes/: index.jsx
frontend/src/store/: chatStore.js
frontend/src/utils/: env.js  pptxExporter.js  slideSplitter.js  smartImage.js
frontend/src/views/: LoginView.jsx  MainLayout.jsx  NotFoundView.jsx
mvp_fastapi/: ENV_SETUP.md  PPT_OPERATION_GUIDE.md  SIMPLE_USAGE.md  TEMPLATE_USAGE.md  main.py  orchestrator.py  requirements.txt
mvp_fastapi/services/: __init__.py  content.py  design.py  exporter.py  outline.py
mvp_fastapi/static/: app.js
mvp_fastapi/templates/: index.html
